@@ -1503,9 +1503,9 @@ USER_GROUP	INACTIVE	INT	\N	0	0	1	1	7	0	0	INACTIVE	\N	\N	\N
 USER_GROUP	TYPEX	INT	\N	0	0	1	1	8	0	0	TYPEX	\N	\N	\N
 DB_USER_IN_GROUP	USER_GROUP_ID	ID	USER_GROUP	1	1	1	1	1	0	1	group ID	\N	\N	\N
 DB_USER_IN_GROUP	DB_USER_ID	ID	DB_USER	2	0	1	1	2	0	1	user id	\N	\N	\N
-STATE	 NAME	NAME	\N	0	1	1	1	2	1	1	Key	\N	\N	\N
+STATE	NAME	NAME	\N	0	1	1	1	2	1	1	Key	\N	\N	\N
 STATE	NICE	NAME	\N	0	0	1	1	3	0	1	nice name	\N	\N	\N
-STATE	 ACTION_STR	NAME	\N	0	0	1	1	4	0	0	action string	\N	\N	\N
+STATE	ACTION_STR	NAME	\N	0	0	1	1	4	0	0	action string	\N	\N	\N
 D_LINK	C_DOC_ID	ID	DOC	2	0	1	1	2	0	1	child doc_id	\N	\N	\N
 D_LINK	M_DOC_ID	ID	DOC	1	0	1	1	1	0	1	mother doc_id	\N	\N	\N
 DOC	DB_USER_ID	ID	DB_USER	0	0	1	1	4.5	0	0	owner	\N	\N	\N
