@@ -2,6 +2,7 @@ CHANGE-Log
 
 1.01 2020-12-28
 - new tables s_vario, s_vario_desc
+- new data for CCT_COLUMN, STATE
 
 
 1.0 2020-12-21
